tests/fixtures/security/certs/invalid/direct_missing_root.store
store_id=direct-missing-root-store
store_version=1
updated_at_utc=2026-03-11T08:30:00Z
revocation_source=file://revocation/cache/root
record|roots|9999999999999999999999999999999999999999999999999999999999999999|CN=Unrelated Root|CN=Unrelated Root|root|2026-01-01T00:00:00Z|2036-01-01T00:00:00Z|1099
record|device_certs|7777777777777777777777777777777777777777777777777777777777777777|CN=Media Server|CN=Root CA|client|2026-01-01T00:00:00Z|2028-01-01T00:00:00Z|1007
issuer_role_hint|7777777777777777777777777777777777777777777777777777777777777777|root
